# RAGBC

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
config/: settings.py
dags/ingestion/: __init__.py  ethereum_incremental.py
docker/: Dockerfile  docker-compose.yml
docker/init/clickhouse/: init.sql
docs/architecture/: ARCHITECTURE.md  FILE_STRUCTURE.md  IMPLEMENTATION_ROADMAP.md  MULTI_AGENT_ARCHITECTURE.md  TECHNOLOGY_STACK.md  VALIDATION_HALLUCINATION_MITIGATION.md
src/: __init__.py
src/agents/: __init__.py  base.py  state.py
src/agents/retrieval/: __init__.py  fusion.py  retrieval_agent.py
src/agents/validator/: __init__.py  validator_agent.py
src/api/: main.py
src/api/middleware/: logging.py
src/api/routes/: health.py  investigations.py  queries.py
src/db/clickhouse/: __init__.py  client.py
src/db/neo4j/: __init__.py  client.py
src/db/qdrant/: __init__.py  client.py
src/workflows/: __init__.py  investigation.py
tests/: __init__.py  conftest.py
